test/corpus/literals.txt
=====================
double-quoted string
=====================

Feature: f
  Scenario: s
    Given I enter "hello world" into the form

---

(source_file
  (feature_header keyword: (feature_keyword) name: (header_text))
  (scenario_header keyword: (scenario_keyword) name: (header_text))
  (step
    keyword: (step_keyword)
    text: (step_text (string))))

=====================
single-quoted string
=====================

Feature: f
  Scenario: s
    Given the name is 'Alice'

---

(source_file
  (feature_header keyword: (feature_keyword) name: (header_text))
  (scenario_header keyword: (scenario_keyword) name: (header_text))
  (step
    keyword: (step_keyword)
    text: (step_text (string))))

=====================
integer and float
=====================

Feature: f
  Scenario: s
    Given 42 items costing 3.14 each

---

(source_file
  (feature_header keyword: (feature_keyword) name: (header_text))
  (scenario_header keyword: (scenario_keyword) name: (header_text))
  (step
    keyword: (step_keyword)
    text: (step_text (number) (number))))

=====================
mixed string and number
=====================

Feature: f
  Scenario: s
    Given I pay 100 for "a book"

---

(source_file
  (feature_header keyword: (feature_keyword) name: (header_text))
  (scenario_header keyword: (scenario_keyword) name: (header_text))
  (step
    keyword: (step_keyword)
    text: (step_text (number) (string))))
